# Aegis

./: .gitignore  demo-service.py  docker-compose.yaml  test.py
aegis/: dashboard.py  main.py  pyproject.toml
aegis/agents/: graph.py  guard_agent.py  memory_agent.py  replay_agent.py  risk_agent.py
aegis/api/: webhook.py
aegis/kafka/: consumer.py
aegis/models/: risk.py  state.py
aegis/scripts/: seed_failures.py
docker/postgress/: init.sql
